fix alignment of pic

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -64,6 +64,7 @@
       object-position: 50%;
       margin: 0;
       grid-area: pic;
+      grid-row: pic;
       border-radius: 0;
     }
   }
